--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.5.1",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
+    "immer": "^10.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
