--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.1.3",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "firebase": "^9.22.1",
     "immer": "^10.0.2",
     "jwt-decode": "^3.1.2",
