--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.3",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
