--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-VITE_SERVER_URL=http://localhost:8080
-VAPID_KEY="BOWnZ-B4uEXos_RR0oqxRmUkmbXP8JZ7NQ-5e4eG-kboKgIdrfmQiIThjvH4u0TEPhnQOwns2119o0Gd8fNcKyY"
-API_KEY="AIzaSyAB9o-1VZVU2D9apmw377D6g5MxcMNUl7Y"
-AUTH_DOMAIN="event-registration-9f576.firebaseapp.com"
-PROJECT_ID="event-registration-9f576"
-STORAGE_BUCKET="event-registration-9f576.appspot.com"
-MESSAGING_SENDER_ID="978187605653"
-APP_ID="1:978187605653:web:9e57f065a3d36ad655ad9c"
-MEASUREMENT_ID="G-4MBGX3J4K3"
+VITE_SERVER_URL=http://bnb.eastasia.cloudapp.azure.com:443
+API_KEY="AIzaSyCXIUJMLNHedprMBYo-1yit0gLp2ONCb9s"
+AUTH_DOMAIN="bnb-uit.firebaseapp.com"
+PROJECT_ID="bnb-uit"
+STORAGE_BUCKET="bnb-uit.appspot.com"
+MESSAGING_SENDER_ID="425374593612"
+APP_ID="1:425374593612:web:68c95cec4f5eb12fe73ae9"
